# healthcare

./: .gitignore  README.md  pyproject.toml
dbt_project/: .user.yml  dbt_project.yml
dbt_project/macros/: generate_schema_name.sql
dbt_project/models/marts/: dim_allergies.sql  dim_conditions.sql  dim_date.sql  dim_devices.sql  dim_imaging_studies.sql  dim_immunizations.sql  dim_medications.sql  dim_organizations.sql  dim_patients.sql  dim_payers.sql  dim_procedures.sql  dim_providers.sql  dim_supplies.sql  fct_allergies.sql  fct_careplans.sql  fct_claims.sql  fct_claims_transactions.sql  fct_conditions.sql  fct_devices.sql  fct_encounters.sql  fct_imaging_studies.sql  fct_immunizations.sql  fct_medications.sql  fct_observations.sql  fct_payer_transitions.sql  fct_procedures.sql  fct_supplies.sql
dbt_project/models/staging/: source.yml  stg_allergies.sql  stg_careplans.sql  stg_claims.sql  stg_claims_transactions.sql  stg_conditions.sql  stg_devices.sql  stg_encounters.sql  stg_imaging_studies.sql  stg_immunizations.sql  stg_medications.sql  stg_observations.sql  stg_organizations.sql  stg_patients.sql  stg_payer_transitions.sql  stg_payers.sql  stg_procedures.sql  stg_providers.sql  stg_supplies.sql
