[project]
name = "healthcare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.11.6",
    "dagster-gcp-pandas>=0.27.6",
    "dagster-webserver>=1.11.6",
    "dbt-bigquery>=1.10.1",
    "dbt-core>=1.10.8",
    "pandas>=2.3.1",
    "pandas-gbq>=0.29.2",
    "python-dotenv>=1.1.1",
]
